-
Bug
-
Resolution: Done
-
P2: Important
-
5.11.0
-
None
When Qt applications are launched on gnome-shell 3.28.2, they get stuck in the upper right corner until they are tiled twice (i.e. press super+left twice).
This issue doesn't happen on other compositors such as kwin, weston or earlier versions of gnome-shell.
I added an issue in the gnome-shell tracker as well, as I believe this issue is related to gnome-shell not handling unset window geometry very well. (see upcoming patch)
- is required for
-
QTBUG-68619 Make Qt Wayland with widgets usable on gnome-shell
-
- Closed
-
- relates to
-
QTBUG-68601 Qt Applications Not Show under Wayland Gnome Activities Overview
-
- Closed
-